add_subdirectory(callback)
add_subdirectory(changescene)
add_subdirectory(character)
add_subdirectory(character_remove)
add_subdirectory(character_resize)
add_subdirectory(cooked)
add_subdirectory(enable_disable)
add_subdirectory(filtering)
add_subdirectory(geometry)
add_subdirectory(geometry_readd)
add_subdirectory(geometry_source)
add_subdirectory(heightfield)
add_subdirectory(heightfield_readd)
add_subdirectory(invalidscene)
add_subdirectory(multiscene)
add_subdirectory(physicsscene)
